--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/toast": "^3.3.1",
+    "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "vue-numeral-filter": "^2.0.0"
